<resources>
    <string name="app_name">OTUS_Network</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="OkHttpBlocking">OkHttp Blocking</string>
    <string name="OkHttpAsync">OkHttp Async</string>
    <string name="OkHttpAsyncWithInterceptor">OkHttp Async with Interceptor</string>
    <string name="RetrofitCall">Retrofit Call</string>
    <string name="RetrofitCallMoshi">Retrofit Call Moshi</string>
    <string name="RetrofitCallMoshiConverter">Retrofit Call Moshi Converter</string>
    <string name="RetrofitCoroutinesMoshiConverter">Retrofit Coroutines Moshi Converter</string>
</resources>