<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <ScrollView
        android:id="@+id/textview_response_data_scrollable_block"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/button_okhttp_blocking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textview_response_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <Button
        android:id="@+id/button_okhttp_blocking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OkHttpBlocking"
        app:layout_constraintBottom_toTopOf="@id/button_okhttp_async"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_response_data_scrollable_block" />

    <Button
        android:id="@+id/button_okhttp_async"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OkHttpAsync"
        app:layout_constraintBottom_toTopOf="@id/button_okhttp_async_with_interceptor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_okhttp_blocking" />
    <Button
        android:id="@+id/button_okhttp_async_with_interceptor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OkHttpAsyncWithInterceptor"
        app:layout_constraintBottom_toTopOf="@id/button_retrofit_call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_okhttp_async" />
    <Button
        android:id="@+id/button_retrofit_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RetrofitCall"
        app:layout_constraintBottom_toTopOf="@id/button_retrofit_call_moshi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_okhttp_async_with_interceptor" />
    <Button
        android:id="@+id/button_retrofit_call_moshi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RetrofitCallMoshi"
        app:layout_constraintBottom_toTopOf="@id/button_retrofit_call_moshi_converter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_retrofit_call" />
    <Button
        android:id="@+id/button_retrofit_call_moshi_converter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RetrofitCallMoshiConverter"
        app:layout_constraintBottom_toTopOf="@+id/button_retrofit_coroutines"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_retrofit_call_moshi" />
    <Button
        android:id="@+id/button_retrofit_coroutines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RetrofitCoroutinesMoshiConverter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_retrofit_call_moshi_converter" />
</androidx.constraintlayout.widget.ConstraintLayout>